# EDWingHelper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
docs/: hero-bg.webm  index.html
lib/: CMakeLists.txt
lib/tinyui/include/Window/: Window.h  WindowBorderless.h
lib/tinyui/src/DX11/: DX11Adapter.cpp
lib/tinyui/src/Vulkan/: Swapchain.cpp
lib/tinyui/src/Window/: Window.cpp  WindowBorderless.cpp
src/: App.cpp  App.h  CMakeLists.txt  GUI.cpp  GUI.h  Settings.cpp  Settings.h  main.cpp
src/fonts/: eurocaps.h  eurostile.h  icons.h
src/util/: EliteFileUtil.cpp  EliteFileUtil.h
src/watchers/: JournalWatcher.cpp  JournalWatcher.h
